#1 #time 60m Refactors the UI fragment entity.
